--- a/Azamon/nbproject/project.properties
+++ b/Azamon/nbproject/project.properties
@@ -30,10 +30,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.Azamon.jar=../InputFiles/Azamon.jar
+file.reference.IA-Azamon-src=../src
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Azamon.jar}
+    ${file.reference.Azamon.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,4 +77,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.src.dir=${file.reference.IA-Azamon-src}
 test.src.dir=test
